--- a/index.html
+++ b/index.html
@@ -1,39 +1,155 @@
-<!DOCTYPE html><html lang="de">
+<!DOCTYPE html>
+<html lang="de">
 <head>
-<meta charset="UTF-8">
-<title>Shader Szene mit Orbit Controls</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<title>Shader mit echten Orbit Controls (gedämpft)</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <style>
-  html, body { margin: 0; padding: 0; overflow: hidden; background: black; height: 100%; }
-  canvas { width: 100vw; height: 100vh; display: block; cursor: grab; }
-  canvas:active { cursor: grabbing; }
+  html, body {
+    margin: 0; padding: 0; overflow: hidden; background: black;
+    height: 100%;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    touch-action: none; /* verhindert standard scroll/pinch */
+  }
+  canvas {
+    width: 100vw;
+    height: 100vh;
+    display: block;
+    cursor: grab;
+  }
+  canvas:active {
+    cursor: grabbing;
+  }
 </style>
 </head>
 <body>
 <canvas id="glcanvas"></canvas>
-<script type="x-shader/x-vertex" id="vertexShader">
+
+<script type="x-shader/x-vertex">
 attribute vec3 position;
 void main() {
   gl_Position = vec4(position, 1.0);
 }
 </script>
-<script type="x-shader/x-fragment" id="fragmentShader">
+
+<script type="x-shader/x-fragment">
 precision highp float;
 uniform vec2 resolution;
 uniform float time;
 uniform vec3 camPos;
-uniform vec3 camTarget;mat3 rotationY(float a) { float s = sin(a), c = cos(a); return mat3(c,0.0,-s, 0.0,1.0,0.0, s,0.0,c); } mat3 rotationZ(float a) { float s = sin(a), c = cos(a); return mat3(c,s,0.0, -s,c,0.0, 0.0,0.0,1.0); } float fBox(vec3 p, vec3 b) { vec3 d = abs(p) - b; return length(max(d,0.0)) + min(max(d.x,max(d.y,d.z)),0.0); } float scene(vec3 p, float time) { float baseSize = 0.3 + 0.1 * sin(time * 0.3); float box = fBox(p, vec3(baseSize)); float sphere = length(p) - (0.4 + 0.1 * sin(time * 0.5)); return min(box, sphere); } vec3 getNormal(vec3 p, float time) { float e = 0.001; vec2 h = vec2(e,0.0); return normalize(vec3( scene(p + h.xyy, time) - scene(p - h.xyy, time), scene(p + h.yxy, time) - scene(p - h.yxy, time), scene(p + h.yyx, time) - scene(p - h.yyx, time) )); } void main() { vec2 uv = (gl_FragCoord.xy / resolution) * 2.0 - 1.0; uv.x *= resolution.x / resolution.y; vec3 ro = camPos; vec3 ta = camTarget; vec3 f = normalize(ta - ro); vec3 r = normalize(cross(vec3(0.0,1.0,0.0), f)); vec3 u = cross(f, r); vec3 rd = normalize(uv.x * r + uv.y * u + f); float t = 0.0; float d; bool hit = false; for (int i = 0; i < 100; i++) { vec3 p = ro + rd * t; d = scene(p, time); if (d < 0.001) { hit = true; break; } if (t > 20.0) break; t += d; } vec3 col = vec3(0.0); if (hit) { vec3 p = ro + rd * t; vec3 n = getNormal(p, time); vec3 lightDir = normalize(vec3(0.3, 0.5, 0.6)); float diff = clamp(dot(n, lightDir), 0.0, 1.0); float spec = pow(clamp(dot(reflect(-lightDir, n), -rd), 0.0, 1.0), 16.0); col = vec3(0.8,0.9,1.0) * diff + vec3(1.0) * spec * 0.5; col = pow(col, vec3(0.4545)); } gl_FragColor = vec4(col, 1.0); } </script>
+uniform vec3 camTarget;
+
+mat3 rotationY(float angle) {
+  float s = sin(angle), c = cos(angle);
+  return mat3(
+    c, 0.0, -s,
+    0.0, 1.0, 0.0,
+    s, 0.0, c
+  );
+}
+
+mat3 rotationZ(float angle) {
+  float s = sin(angle), c = cos(angle);
+  return mat3(
+    c, s, 0.0,
+   -s, c, 0.0,
+    0.0, 0.0, 1.0
+  );
+}
+
+float fBox(vec3 p, vec3 b) {
+  vec3 d = abs(p) - b;
+  return length(max(d, 0.0)) + min(max(d.x, max(d.y, d.z)), 0.0);
+}
+
+float scene(vec3 p) {
+  float s = 0.3;
+  vec3 pos = p;
+  float value = 1.0;
+
+  for (int i = 0; i < 6; i++) {
+    vec2 absXY = abs(pos.xy) - value;
+    pos = vec3(absXY, pos.z);
+    pos = rotationY(time * 0.2) * pos;
+    pos = rotationZ(time * 0.15) * pos;
+    value *= 0.9;
+  }
+
+  float box1 = fBox(pos, vec3(0.3));
+  float box2 = fBox(pos, vec3(0.1));
+  float d = -box1;
+  d = min(d, box2);
+
+  float sphere = length(pos) - 0.4;
+  return max(d, sphere);
+}
+
+vec3 getNormal(vec3 p) {
+  float e = 0.001;
+  vec2 h = vec2(e, 0.0);
+  return normalize(vec3(
+    scene(p + h.xyy) - scene(p - h.xyy),
+    scene(p + h.yxy) - scene(p - h.yxy),
+    scene(p + h.yyx) - scene(p - h.yyx)
+  ));
+}
+
+void main() {
+  vec2 uv = (gl_FragCoord.xy / resolution) * 2.0 - 1.0;
+  uv.x *= resolution.x / resolution.y;
+
+  vec3 ro = camPos;
+  vec3 ta = camTarget;
+  vec3 f = normalize(ta - ro);
+  vec3 r = normalize(cross(vec3(0.0,1.0,0.0), f));
+  vec3 u = cross(f, r);
+  vec3 rd = normalize(uv.x * r + uv.y * u + f);
+
+  float t = 0.0;
+  float d;
+  bool hit = false;
+  for(int i = 0; i < 100; i++) {
+    vec3 p = ro + rd * t;
+    d = scene(p);
+    if (d < 0.001) {
+      hit = true;
+      break;
+    }
+    if (t > 20.0) break;
+    t += d;
+  }
+
+  vec3 col = vec3(0.0);
+  if (hit) {
+    vec3 p = ro + rd * t;
+    vec3 n = getNormal(p);
+    vec3 lightDir = normalize(vec3(0.7, 1.0, 0.8));
+    float diff = clamp(dot(n, lightDir), 0.0, 1.0);
+    float spec = pow(clamp(dot(reflect(-lightDir, n), -rd), 0.0, 1.0), 16.0);
+    col = vec3(0.8, 0.9, 1.0) * diff + vec3(1.0) * spec * 0.4;
+    col = pow(col, vec3(0.4545));
+  }
+
+  gl_FragColor = vec4(col, 1.0);
+}
+</script>
 
 <script>
-const canvas = document.getElementById("glcanvas");
-const gl = canvas.getContext("webgl");
+const canvas = document.getElementById('glcanvas');
+const gl = canvas.getContext('webgl');
+if (!gl) alert('WebGL nicht unterstützt');
+
 function resize() {
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
   gl.viewport(0, 0, canvas.width, canvas.height);
 }
-window.addEventListener("resize", resize);
+window.addEventListener('resize', resize);
 resize();
+
 function compileShader(type, source) {
   const shader = gl.createShader(type);
   gl.shaderSource(shader, source);
@@ -44,120 +160,242 @@ function compileShader(type, source) {
   }
   return shader;
 }
-const vs = compileShader(gl.VERTEX_SHADER, document.getElementById("vertexShader").textContent);
-const fs = compileShader(gl.FRAGMENT_SHADER, document.getElementById("fragmentShader").textContent);
+
+const vsSource = document.querySelector('script[type="x-shader/x-vertex"]').textContent;
+const fsSource = document.querySelector('script[type="x-shader/x-fragment"]').textContent;
+
+const vertexShader = compileShader(gl.VERTEX_SHADER, vsSource);
+const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fsSource);
+
 const program = gl.createProgram();
-gl.attachShader(program, vs);
-gl.attachShader(program, fs);
+gl.attachShader(program, vertexShader);
+gl.attachShader(program, fragmentShader);
 gl.linkProgram(program);
+if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+  console.error(gl.getProgramInfoLog(program));
+}
 gl.useProgram(program);
-const positionLoc = gl.getAttribLocation(program, 'position');
-const resolutionLoc = gl.getUniformLocation(program, 'resolution');
+
+const posLoc = gl.getAttribLocation(program, 'position');
+const resLoc = gl.getUniformLocation(program, 'resolution');
 const timeLoc = gl.getUniformLocation(program, 'time');
 const camPosLoc = gl.getUniformLocation(program, 'camPos');
 const camTargetLoc = gl.getUniformLocation(program, 'camTarget');
+
 const buffer = gl.createBuffer();
 gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
 gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
   -1,-1,0, 1,-1,0, -1,1,0,
   -1,1,0, 1,-1,0, 1,1,0
 ]), gl.STATIC_DRAW);
-gl.enableVertexAttribArray(positionLoc);
-gl.vertexAttribPointer(positionLoc, 3, gl.FLOAT, false, 0, 0);
+gl.enableVertexAttribArray(posLoc);
+gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
 
-// Orbit Camera Controls
-let theta = Math.PI / 4;
-let phi = Math.PI / 4;
-let radius = 4;
-let target = [0, 0, 0];
-function getCamPos() {
-  return [
-    target[0] + radius * Math.sin(phi) * Math.sin(theta),
-    target[1] + radius * Math.cos(phi),
-    target[2] + radius * Math.sin(phi) * Math.cos(theta)
-  ];
-}
-let isDragging = false, isPanning = false;
-let lastX, lastY;
-canvas.addEventListener('mousedown', e => {
+// Orbit Controls state:
+let theta = Math.PI/4;  // aktueller Winkel horizontal
+let phi = Math.PI/4;    // aktuell Winkel vertikal
+let radius = 4.0;       // aktueller Radius
+let target = [0,0,0];   // aktueller Zielpunkt
+
+// Zielwerte für sanfte Animation (damped)
+let targetTheta = theta;
+let targetPhi = phi;
+let targetRadius = radius;
+let targetPos = [...target];
+
+// Pan offsets
+// (hier wird target direkt animiert)
+
+// Für Maus/Touch
+let isDragging = false;
+let isPanning = false;
+let lastX = 0, lastY = 0;
+
+let touchDistStart = 0;
+let touchRadiusStart = radius;
+
+// Maus Events
+canvas.addEventListener('mousedown', (e) => {
   isDragging = true;
+  lastX = e.clientX;
+  lastY = e.clientY;
+  // Rechtsklick oder Shift = Pan
   isPanning = e.button === 2 || e.shiftKey;
-  lastX = e.clientX;
-  lastY = e.clientY;
+  e.preventDefault();
 });
-canvas.addEventListener('mouseup', () => isDragging = false);
-canvas.addEventListener('mousemove', e => {
+canvas.addEventListener('mouseup', (e) => {
+  isDragging = false;
+  isPanning = false;
+});
+canvas.addEventListener('mouseleave', (e) => {
+  isDragging = false;
+  isPanning = false;
+});
+canvas.addEventListener('mousemove', (e) => {
   if (!isDragging) return;
-  const dx = e.clientX - lastX;
-  const dy = e.clientY - lastY;
+  let dx = e.clientX - lastX;
+  let dy = e.clientY - lastY;
   lastX = e.clientX;
   lastY = e.clientY;
+
   if (isPanning) {
-    target[0] -= dx * 0.01;
-    target[1] += dy * 0.01;
+    // Pan: verschiebe target parallel zur Kameraebene
+    const panSpeed = 0.005 * targetRadius;
+    let up = [0,1,0];
+    let camPos = getCamPos(targetTheta, targetPhi, targetRadius, targetPos);
+    let forward = normalize(subtractVectors(targetPos, camPos));
+    let right = normalize(cross(forward, up));
+    let camUp = normalize(cross(right, forward));
+    // Pan Zielpunkt ändern
+    targetPos = addVectors(targetPos,
+      addVectors(
+        scaleVector(right, -dx * panSpeed),
+        scaleVector(camUp, dy * panSpeed)
+      )
+    );
   } else {
-    theta -= dx * 0.005;
-    phi -= dy * 0.005;
-    phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
+    // Orbit: Zielwinkel ändern
+    const orbitSpeed = 0.005;
+    targetTheta -= dx * orbitSpeed;
+    targetPhi -= dy * orbitSpeed;
+    const eps = 0.01;
+    targetPhi = Math.max(eps, Math.min(Math.PI - eps, targetPhi));
   }
 });
-canvas.addEventListener('wheel', e => {
-  e.preventDefault();
-  radius += e.deltaY * 0.005;
-  radius = Math.max(1, Math.min(20, radius));
-});
-canvas.addEventListener('contextmenu', e => e.preventDefault());
 
-// Touch Controls
-let touchMode = null;
-let touchStartDist = 0;
-canvas.addEventListener("touchstart", e => {
+// Zoom per Rad
+canvas.addEventListener('wheel', (e) => {
+  e.preventDefault();
+  const zoomSpeed = 0.0015;
+  targetRadius += e.deltaY * zoomSpeed;
+  targetRadius = Math.max(0.5, Math.min(20, targetRadius));
+});
+
+// Touch Events (für mobile Geräte)
+canvas.addEventListener('touchstart', (e) => {
   if (e.touches.length === 1) {
-    touchMode = "rotate";
+    isDragging = true;
+    isPanning = false;
     lastX = e.touches[0].clientX;
     lastY = e.touches[0].clientY;
   } else if (e.touches.length === 2) {
-    touchMode = "zoom";
-    const dx = e.touches[0].clientX - e.touches[1].clientX;
-    const dy = e.touches[0].clientY - e.touches[1].clientY;
-    touchStartDist = Math.sqrt(dx * dx + dy * dy);
+    isDragging = false;
+    isPanning = false;
+    // Pinch Zoom starten
+    let dx = e.touches[0].clientX - e.touches[1].clientX;
+    let dy = e.touches[0].clientY - e.touches[1].clientY;
+    touchDistStart = Math.sqrt(dx*dx + dy*dy);
+    touchRadiusStart = targetRadius;
   }
 });
-canvas.addEventListener("touchmove", e => {
+canvas.addEventListener('touchmove', (e) => {
   e.preventDefault();
-  if (touchMode === "rotate" && e.touches.length === 1) {
-    const dx = e.touches[0].clientX - lastX;
-    const dy = e.touches[0].clientY - lastY;
+  if (e.touches.length === 1 && isDragging) {
+    let dx = e.touches[0].clientX - lastX;
+    let dy = e.touches[0].clientY - lastY;
     lastX = e.touches[0].clientX;
     lastY = e.touches[0].clientY;
-    theta -= dx * 0.005;
-    phi -= dy * 0.005;
-    phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
-  } else if (touchMode === "zoom" && e.touches.length === 2) {
-    const dx = e.touches[0].clientX - e.touches[1].clientX;
-    const dy = e.touches[0].clientY - e.touches[1].clientY;
-    const dist = Math.sqrt(dx * dx + dy * dy);
-    const delta = dist - touchStartDist;
-    radius -= delta * 0.01;
-    radius = Math.max(0.5, Math.min(20, radius));
-    touchStartDist = dist;
+
+    // Standard Orbit ohne Pan (Shift/Rightclick gibt es hier nicht)
+    const orbitSpeed = 0.005;
+    targetTheta -= dx * orbitSpeed;
+    targetPhi -= dy * orbitSpeed;
+    const eps = 0.01;
+    targetPhi = Math.max(eps, Math.min(Math.PI - eps, targetPhi));
+  } else if (e.touches.length === 2) {
+    // Pinch Zoom
+    let dx = e.touches[0].clientX - e.touches[1].clientX;
+    let dy = e.touches[0].clientY - e.touches[1].clientY;
+    let dist = Math.sqrt(dx*dx + dy*dy);
+    let zoomFactor = touchDistStart / dist;
+    targetRadius = touchRadiusStart * zoomFactor;
+    targetRadius = Math.max(0.5, Math.min(20, targetRadius));
   }
 });
-canvas.addEventListener("touchend", () => touchMode = null);
+canvas.addEventListener('touchend', (e) => {
+  if (e.touches.length === 0) {
+    isDragging = false;
+    isPanning = false;
+  }
+});
 
-// Render Loop
+// Hilfsfunktionen für Vektor:
+
+function subtractVectors(a,b) {
+  return [a[0]-b[0], a[1]-b[1], a[2]-b[2]];
+}
+function addVectors(a,b) {
+  return [a[0]+b[0], a[1]+b[1], a[2]+b[2]];
+}
+function scaleVector(v,s) {
+  return [v[0]*s, v[1]*s, v[2]*s];
+}
+function lengthVector(v) {
+  return Math.sqrt(v[0]*v[0]+v[1]*v[1]+v[2]*v[2]);
+}
+function normalize(v) {
+  let len = lengthVector(v);
+  if(len>0.00001) return scaleVector(v, 1/len);
+  return [0,0,0];
+}
+function cross(a,b) {
+  return [
+    a[1]*b[2] - a[2]*b[1],
+    a[2]*b[0] - a[0]*b[2],
+    a[0]*b[1] - a[1]*b[0]
+  ];
+}
+
+// Kamera Position aus Theta, Phi, Radius, Target berechnen
+function getCamPos(tTheta=theta, tPhi=phi, tRadius=radius, tTarget=target) {
+  let sinPhi = Math.sin(tPhi);
+  let x = tRadius * sinPhi * Math.sin(tTheta);
+  let y = tRadius * Math.cos(tPhi);
+  let z = tRadius * sinPhi * Math.cos(tTheta);
+  return addVectors(tTarget, [x,y,z]);
+}
+
+// Dämpfungsfunktion (lerp)
+function lerp(a,b,t) {
+  return a + (b - a) * t;
+}
+
+function lerpVec(a,b,t) {
+  return [
+    lerp(a[0], b[0], t),
+    lerp(a[1], b[1], t),
+    lerp(a[2], b[2], t)
+  ];
+}
+
+// Animation Loop
 function render(t) {
-  const timeSec = t * 0.001;
   gl.viewport(0, 0, canvas.width, canvas.height);
   gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-  const camPos = getCamPos();
-  gl.uniform2f(resolutionLoc, canvas.width, canvas.height);
-  gl.uniform1f(timeLoc, timeSec);
+
+  // Dämpfe Werte, 0.1 = Speed der Animation (höher = schneller)
+  const damping = 0.1;
+  theta += (targetTheta - theta) * damping;
+  phi += (targetPhi - phi) * damping;
+  radius += (targetRadius - radius) * damping;
+  target = lerpVec(target, targetPos, damping);
+
+  let camPos = getCamPos(theta, phi, radius, target);
+
+  gl.useProgram(program);
+  gl.uniform2f(resLoc, canvas.width, canvas.height);
+  gl.uniform1f(timeLoc, t * 0.001);
   gl.uniform3fv(camPosLoc, camPos);
   gl.uniform3fv(camTargetLoc, target);
+
   gl.drawArrays(gl.TRIANGLES, 0, 6);
   requestAnimationFrame(render);
 }
+
 requestAnimationFrame(render);
-</script></body>
+
+// Kontextmenü für Rechtsklick deaktivieren, damit Pan mit Rechtsklick funktioniert:
+canvas.addEventListener('contextmenu', e => e.preventDefault());
+</script>
+</body>
 </html>
