--- a/index.html
+++ b/index.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<meta charset="UTF-8" />
-<title>Shader Licht verbessert</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<style>
-  html, body { margin: 0; padding: 0; overflow: hidden; background: black; height: 100%; }
-  canvas { width: 100vw; height: 100vh; display: block; cursor: grab; }
-  canvas:active { cursor: grabbing; }
-</style>
+  <meta charset="UTF-8" />
+  <title>Cinematic Shader mit Orbit Controls</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    html, body {
+      margin: 0; padding: 0; overflow: hidden; background: black;
+      height: 100%;
+      user-select: none;
+      touch-action: none;
+    }
+    canvas {
+      width: 100vw;
+      height: 100vh;
+      display: block;
+      cursor: grab;
+      touch-action: none;
+    }
+    canvas:active {
+      cursor: grabbing;
+    }
+  </style>
 </head>
 <body>
 <canvas id="glcanvas"></canvas>
 
-<script id="vertex-shader" type="x-shader/x-vertex">
+<!-- Vertex Shader -->
+<script type="x-shader/x-vertex">
 attribute vec3 position;
 void main() {
   gl_Position = vec4(position, 1.0);
 }
 </script>
 
-<script id="fragment-shader" type="x-shader/x-fragment">
+<!-- Fragment Shader -->
+<script type="x-shader/x-fragment">
 precision highp float;
 uniform vec2 resolution;
 uniform float time;
@@ -40,22 +55,22 @@ float fBox(vec3 p, vec3 b) {
   return length(max(d,0.0)) + min(max(d.x,max(d.y,d.z)),0.0);
 }
 float scene(vec3 p, float time) {
-  float baseX = 0.3 + 0.07 * sin(time * 0.075);
-  float baseY = 0.3 + 0.05 * cos(time * 0.06);
-  float baseZ = 0.3 + 0.06 * sin(time * 0.045);
-  float smallX = 0.1 + 0.02 * sin(time * 0.05 + 1.0);
-  float smallY = 0.1 + 0.025 * cos(time * 0.065 + 2.0);
-  float smallZ = 0.1 + 0.03 * sin(time * 0.085);
-  float sphereRadius = 0.4 + 0.05 * sin(time * 0.04 + 1.5);
-  float translation = 0.15 * sin(time * 0.035);
+  float baseX = 0.3 + 0.07 * sin(time * 0.15);
+  float baseY = 0.3 + 0.05 * cos(time * 0.12);
+  float baseZ = 0.3 + 0.06 * sin(time * 0.09);
+  float smallX = 0.1 + 0.02 * sin(time * 0.1 + 1.0);
+  float smallY = 0.1 + 0.025 * cos(time * 0.13 + 2.0);
+  float smallZ = 0.1 + 0.03 * sin(time * 0.17);
+  float sphereRadius = 0.4 + 0.05 * sin(time * 0.08 + 1.5);
+  float translation = 0.15 * sin(time * 0.07);
 
   p.z += translation;
   float v = 1.0;
   for (int i = 0; i < 6; i++) {
     vec2 absXY = abs(p.xy) - v;
     p = vec3(absXY, p.z);
-    p = rotationY(time * (0.025 + 0.015 * float(i))) * p;
-    p = rotationZ(time * (0.0175 + 0.01 * float(i))) * p;
+    p = rotationY(time * (0.05 + 0.03 * float(i))) * p;
+    p = rotationZ(time * (0.035 + 0.02 * float(i))) * p;
     v *= 0.9;
   }
 
@@ -75,7 +90,6 @@ vec3 getNormal(vec3 p, float time) {
     scene(p + h.yyx, time) - scene(p - h.yyx, time)
   ));
 }
-
 void main() {
   vec2 uv = (gl_FragCoord.xy / resolution) * 2.0 - 1.0;
   uv.x *= resolution.x / resolution.y;
@@ -101,45 +115,23 @@ void main() {
   if(hit) {
     vec3 p = ro + rd * t;
     vec3 n = getNormal(p, time);
-
-    const int NUM_LIGHTS = 5;
-    vec3 lighting = vec3(0.0);
-
-    for(int i=0; i<NUM_LIGHTS; i++) {
-      float angle = float(i) * 6.28318 / float(NUM_LIGHTS);
-      vec3 lpos = vec3(cos(angle), sin(angle), sin(angle * 2.0)) * 1.2;
-
-      lpos += vec3(
-        0.6 * sin(time * 2.0 + float(i)),
-        0.6 * cos(time * 2.5 + float(i) * 1.3),
-        0.6 * sin(time * 1.8 + float(i) * 0.9)
-      );
-
-      vec3 L = normalize(lpos - p);
-      float dist = length(lpos - p);
-      float attenuation = pow(clamp(1.0 - dist / 3.0, 0.0, 1.0), 2.0);
-
-      float diff = max(dot(n, L), 0.0);
-      float spec = pow(max(dot(n, normalize(L + normalize(ro - p))), 0.0), 64.0);
-
-      vec3 lightColor = vec3(1.2, 1.1, 1.3); // helles Licht
-
-      lighting += lightColor * diff * attenuation * 1.0;
-      lighting += vec3(1.0) * spec * attenuation * 0.3;
-    }
-
-    vec3 ambient = vec3(0.08); // leichtes Umgebungslicht
-    col = lighting + ambient;
-    col = pow(col, vec3(0.4545)); // Gamma-Korrektur
+    vec3 lightDir = normalize(vec3(sin(time*0.5)*2.0, 1.5, cos(time*0.6)*2.0));
+    float diff = clamp(dot(n, lightDir), 0.0, 1.0);
+    float spec = pow(clamp(dot(reflect(-lightDir, n), -rd), 0.0, 1.0), 32.0);
+    col = vec3(1.0) * diff + vec3(1.0) * spec * 0.6;
+    col = mix(col, vec3(1.0), 0.1); // heller, metallischer Look
+    col = pow(col, vec3(0.4545));
   }
-
   gl_FragColor = vec4(col, 1.0);
 }
 </script>
 
+<!-- JavaScript -->
 <script>
 const canvas = document.getElementById("glcanvas");
 const gl = canvas.getContext("webgl");
+if (!gl) alert("WebGL nicht unterstützt");
+
 function resize() {
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
@@ -152,28 +144,33 @@ function compileShader(type, source) {
   const shader = gl.createShader(type);
   gl.shaderSource(shader, source);
   gl.compileShader(shader);
-  if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS))
+  if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
     console.error(gl.getShaderInfoLog(shader));
+    return null;
+  }
   return shader;
 }
 
-const vsSource = document.getElementById("vertex-shader").textContent;
-const fsSource = document.getElementById("fragment-shader").textContent;
+const vsSource = document.querySelector('script[type="x-shader/x-vertex"]').textContent;
+const fsSource = document.querySelector('script[type="x-shader/x-fragment"]').textContent;
 
-const vs = compileShader(gl.VERTEX_SHADER, vsSource);
-const fs = compileShader(gl.FRAGMENT_SHADER, fsSource);
+const vertexShader = compileShader(gl.VERTEX_SHADER, vsSource);
+const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fsSource);
 
 const program = gl.createProgram();
-gl.attachShader(program, vs);
-gl.attachShader(program, fs);
+gl.attachShader(program, vertexShader);
+gl.attachShader(program, fragmentShader);
 gl.linkProgram(program);
+if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+  console.error(gl.getProgramInfoLog(program));
+}
 gl.useProgram(program);
 
-const posLoc = gl.getAttribLocation(program, "position");
-const resLoc = gl.getUniformLocation(program, "resolution");
-const timeLoc = gl.getUniformLocation(program, "time");
-const camPosLoc = gl.getUniformLocation(program, "camPos");
-const camTargetLoc = gl.getUniformLocation(program, "camTarget");
+const posLoc = gl.getAttribLocation(program, 'position');
+const resLoc = gl.getUniformLocation(program, 'resolution');
+const timeLoc = gl.getUniformLocation(program, 'time');
+const camPosLoc = gl.getUniformLocation(program, 'camPos');
+const camTargetLoc = gl.getUniformLocation(program, 'camTarget');
 
 const buffer = gl.createBuffer();
 gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
@@ -184,42 +181,111 @@ gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
 gl.enableVertexAttribArray(posLoc);
 gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
 
-// Camera control
-let isDragging = false, lastX, lastY;
-let theta = Math.PI / 4, phi = Math.PI / 4, radius = 4;
-const target = [0, 0, 0];
-function clamp(x,a,b){ return Math.max(a,Math.min(b,x)); }
+// Orbit Camera
+let theta = Math.PI/4;
+let phi = Math.PI/4;
+let radius = 4.0;
+let target = [0, 0, 0];
+
+function subtractVectors(a,b){ return [a[0]-b[0], a[1]-b[1], a[2]-b[2]]; }
+function addVectors(a,b){ return [a[0]+b[0], a[1]+b[1], a[2]+b[2]]; }
+function scaleVector(v,s){ return [v[0]*s, v[1]*s, v[2]*s]; }
+function lengthVector(v){ return Math.sqrt(v[0]**2 + v[1]**2 + v[2]**2); }
+function normalize(v){ let l = lengthVector(v); return l > 0.00001 ? scaleVector(v, 1/l) : [0,0,0]; }
+function cross(a,b){ return [a[1]*b[2]-a[2]*b[1], a[2]*b[0]-a[0]*b[2], a[0]*b[1]-a[1]*b[0]]; }
+
+function getCamPos() {
+  let sinPhi = Math.sin(phi);
+  let x = radius * sinPhi * Math.sin(theta);
+  let y = radius * Math.cos(phi);
+  let z = radius * sinPhi * Math.cos(theta);
+  return addVectors(target, [x, y, z]);
+}
+
+let isDragging = false;
+let isPanning = false;
+let lastX = 0, lastY = 0;
 
 canvas.addEventListener("mousedown", e => {
-  isDragging = true; lastX = e.clientX; lastY = e.clientY;
+  isDragging = true;
+  isPanning = e.button === 2 || e.shiftKey;
+  lastX = e.clientX;
+  lastY = e.clientY;
 });
 canvas.addEventListener("mouseup", () => isDragging = false);
 canvas.addEventListener("mouseleave", () => isDragging = false);
 canvas.addEventListener("mousemove", e => {
   if (!isDragging) return;
-  let dx = (e.clientX - lastX) * 0.005;
-  let dy = (e.clientY - lastY) * 0.005;
-  lastX = e.clientX; lastY = e.clientY;
-  theta += dx; phi = clamp(phi + dy, 0.1, Math.PI - 0.1);
+  let dx = e.clientX - lastX;
+  let dy = e.clientY - lastY;
+  lastX = e.clientX;
+  lastY = e.clientY;
+  if (isPanning) {
+    const panSpeed = 0.005 * radius;
+    let forward = normalize(subtractVectors(target, getCamPos()));
+    let right = normalize(cross(forward, [0,1,0]));
+    let up = cross(right, forward);
+    target = addVectors(target,
+      addVectors(scaleVector(right, -dx * panSpeed), scaleVector(up, dy * panSpeed))
+    );
+  } else {
+    theta -= dx * 0.005;
+    phi -= dy * 0.005;
+    phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
+  }
 });
 canvas.addEventListener("wheel", e => {
-  radius += e.deltaY * 0.01;
-  radius = clamp(radius, 1.5, 10.0);
+  e.preventDefault();
+  radius += e.deltaY * 0.0015;
+  radius = Math.max(0.5, Math.min(20, radius));
 });
+canvas.addEventListener("contextmenu", e => e.preventDefault());
 
-function getCamPos() {
-  return [
-    radius * Math.sin(phi) * Math.sin(theta),
-    radius * Math.cos(phi),
-    radius * Math.sin(phi) * Math.cos(theta),
-  ];
-}
+// Touch support
+let touchMode = null;
+let touchStartDist = 0;
+canvas.addEventListener("touchstart", e => {
+  if (e.touches.length === 1) {
+    touchMode = "rotate";
+    lastX = e.touches[0].clientX;
+    lastY = e.touches[0].clientY;
+  } else if (e.touches.length === 2) {
+    touchMode = "zoom";
+    let dx = e.touches[0].clientX - e.touches[1].clientX;
+    let dy = e.touches[0].clientY - e.touches[1].clientY;
+    touchStartDist = Math.sqrt(dx * dx + dy * dy);
+  }
+});
+canvas.addEventListener("touchmove", e => {
+  e.preventDefault();
+  if (touchMode === "rotate" && e.touches.length === 1) {
+    let dx = e.touches[0].clientX - lastX;
+    let dy = e.touches[0].clientY - lastY;
+    lastX = e.touches[0].clientX;
+    lastY = e.touches[0].clientY;
+    theta -= dx * 0.005;
+    phi -= dy * 0.005;
+    phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
+  } else if (touchMode === "zoom" && e.touches.length === 2) {
+    let dx = e.touches[0].clientX - e.touches[1].clientX;
+    let dy = e.touches[0].clientY - e.touches[1].clientY;
+    let dist = Math.sqrt(dx * dx + dy * dy);
+    let delta = dist - touchStartDist;
+    radius -= delta * 0.01;
+    radius = Math.max(0.5, Math.min(20, radius));
+    touchStartDist = dist;
+  }
+});
+canvas.addEventListener("touchend", () => touchMode = null);
 
-function render(timeMs) {
-  const time = timeMs * 0.001;
+// Render
+function render(t) {
+  gl.viewport(0, 0, canvas.width, canvas.height);
+  gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+  theta += 0.003; // Auto-Rotation
+  let camPos = getCamPos();
   gl.uniform2f(resLoc, canvas.width, canvas.height);
-  gl.uniform1f(timeLoc, time);
-  const camPos = getCamPos();
+  gl.uniform1f(timeLoc, t * 0.001);
   gl.uniform3fv(camPosLoc, camPos);
   gl.uniform3fv(camTargetLoc, target);
   gl.drawArrays(gl.TRIANGLES, 0, 6);
